# Software_Architecture_design

./: LICENSE  README.md
Monolithic_Architecture/: noxfile.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt
Monolithic_Architecture/docs/: conf.py  index.rst  overview.rst
Monolithic_Architecture/docs/_build/html/: .buildinfo  api.html  design.html  genindex.html  index.html  objects.inv  overview.html  search.html  searchindex.js
Monolithic_Architecture/docs/_build/html/.doctrees/: api.doctree  design.doctree  environment.pickle  index.doctree  overview.doctree
Monolithic_Architecture/docs/_build/html/_sources/: api.rst.txt  design.rst.txt
Monolithic_Architecture/src/: Monolythic2.py  monolithic1.py
Monolithic_Architecture/tests/: test_monolithic1.py
